<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HobbiesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <ImageView
            android:id="@+id/hobbiesIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            app:srcCompat="@drawable/hobbies_icon"
            android:background="@color/black"
            android:contentDescription="@string/HobbiesIcon" />

        <TextView
            android:id="@+id/hobbiesId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/hobbies"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/exitIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@color/black"
            app:srcCompat="@drawable/exit_icon"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/closeApp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/hobbiesImg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/hobbies_img"
        android:layout_weight="1"
        android:background="@color/black"
        android:contentDescription="@string/hobbiesImage" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".HobbiesActivity"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <ImageView
                android:id="@+id/hobbiesSurf"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_weight="0.5"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/hobbies_surf"
                android:contentDescription="@string/hobbiesSurf" />

            <ImageView
                android:id="@+id/hobbiesPlay"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_weight="0.5"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/hobbies_play"
                android:contentDescription="@string/hobbiesPlay"/>

            <ImageView
                android:id="@+id/hobbiesNetflix"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_weight="0.5"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/hobbies_netflix"
                android:contentDescription="@string/hobbiesNetflix"/>

            <ImageView
                android:id="@+id/hobbiesHike"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_weight="0.5"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/hobbies_hike"
                android:contentDescription="@string/hobbiesHike"/>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/btnHome"
            android:text="@string/btnHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnEducation"
            android:text="@string/btnEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:id="@+id/btnSkill"
            android:text="@string/btnSkill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnAchievement"
            android:text="@string/btnAchievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/copyrightView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/copyrightInfo"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>