<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EducationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/black">

        <ImageView
            android:id="@+id/educationIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            app:srcCompat="@drawable/education_icon"
            android:contentDescription="@string/educationIcon" />

        <TextView
            android:id="@+id/educationId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/education"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/exitIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@color/black"
            app:srcCompat="@drawable/exit_icon"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/closeApp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/educationImg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/education_img"
        android:layout_weight="1"
        android:background="@color/black"
        android:contentDescription="@string/educationImage" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".EducationActivity"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <View
                android:id="@+id/dividerTop"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/educationSubTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dorsetEducation"
                style="@style/TextBold"
                android:textSize="18sp"/>

            <View
                android:id="@+id/dividerMiddle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"/>

            <TextView
                android:id="@+id/educationMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senacEducation"
                style="@style/TextBold"
                android:textSize="18sp"
                android:paddingTop="10dp"/>

            <View
                android:id="@+id/dividerSubMiddle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"/>

            <TextView
                android:id="@+id/educationBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InstituteEducation"
                style="@style/TextBold"
                android:textSize="18sp"
                android:paddingTop="10dp"/>

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/btnHome"
            android:text="@string/btnHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSkill"
            android:text="@string/btnSkill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/btnHobbies"
            android:text="@string/btnHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnAchievement"
            android:text="@string/btnAchievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/copyrightView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/copyrightInfo"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    </LinearLayout>